--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-APP_BASE_URL="http://localhost:8000/"
+# Localhost
+# NEXT_PUBLIC_APP_BASE_UR="http://localhost:8000"
+
+# Staging
+NEXT_PUBLIC_APP_BASE_URL="http://the-man-who-calculated-be-dev.us-east-1.elasticbeanstalk.com"
