--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ npm-debug.log*
 
 # local env files
 .env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
