--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "test": "jest --watch --runInBand"
   },
   "dependencies": {
@@ -30,5 +30,9 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "engines" : { 
+    "npm" : ">=9.5.1",
+    "node" : ">=18.16.1"
   }
 }
