--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "incremental": true
   },
   "exclude": [
@@ -27,5 +27,6 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/_document.js",
-    "jest.config.ts"  ]
+    "jest.config.ts"
+  ]
 }
