--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npm i && next build && next start -p $PORT",
+    "localStart": "next start -p 3000",
     "test": "jest --watch --runInBand"
   },
   "dependencies": {
