--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "axios-mock-adapter": "^1.21.5",
+    "eslint": "^8.44.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "prettier": "^3.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
-  "engines" : { 
-    "npm" : ">=9.5.1",
-    "node" : ">=18.16.1"
+  "engines": {
+    "npm": ">=9.5.1",
+    "node": ">=18.16.1"
   }
 }
